# cxx-ocr

./: README.md
mindlite_ocr/: CMakeLists.txt  help.txt
mindlite_ocr/include/: clipper.h  mindocr.h  ocr_api.h  ocr_cls.h  ocr_det.h  ocr_model.h  ocr_rec.h  post_process.h  pre_process.h  utils.h
mindlite_ocr/src/: main.cc  mindocr.cc  ocr_api.cc  ocr_cls.cc  ocr_det.cc  ocr_model.cc  ocr_rec.cc  post_process.cc  pre_process.cc  utils.cc
paddle_lite_ocr/: CMakeLists.txt  help.txt
paddle_lite_ocr/include/: cls_process.h  crnn_process.h  flags.h  ocr_api.h  ocr_det.h  ocr_rec.h  paddleocr.h  post_process.h  utils.h
paddle_lite_ocr/src/: cls_process.cpp  crnn_process.cpp  main.cpp  ocr_api.cpp  ocr_det.cpp  ocr_rec.cpp  paddleocr.cpp  post_process.cpp  utils.cpp
paddle_ocr/: CMakeLists.txt
paddle_ocr/bat/: main.cpp  ocr_wrapper.cpp  ocr_wrapper.h  utility.cpp  utility.h
paddle_ocr/include/: flags.h  ocr_wrapper.h  paddleocr.h  paddlestructure.h  utility.h
paddle_ocr/src/: flags.cpp  main.cpp  ocr_wrapper.cpp  paddleocr.cpp  paddlestructure.cpp  utility.cpp
